<resources>
    <string name="app_name">Alkisah</string>
    <string name="description">descripsi</string>
    <string name="title">title</string>
    <string name="image_description">deskripsi gambar</string>
    <string name="btn_camera">camera</string>
    <string name="btn_gallery">gallery</string>
    <string name="description_hint">deskripsi disini</string>
    <string name="btn_upload">upload</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="password_minimum_character">Kata Sandi Minimal 8 Karakter</string>
    <string name="email_invalid">Format Email Tidak Sesuai</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Sudah punya akun? </string>
    <string name="btn_login">login</string>
    <string name="welcome">Selamat Datang di Alkisah</string>
    <string name="account">User</string>
    <string name="photoprofiles">imgprofiles</string>
    <string name="user">user</string>
    <string name="suggestion2register">Belum punya akun? </string>
    <string name="register_now">Daftar disini</string>
    <string name="login_now">Masuk disini</string>
    <string name="wlcome">Selamat Datang</string>
    <string name="login">Silahkan login dengan akun anda untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="name">Username</string>
    <string name="c_password">Confirmasi password</string>
    <string name="register">Silahkan lengkapi formulir pendaftaran untuk membuat akun</string>
    <string name="dafter">Daftar</string>
    <string name="detail_cerita">Detail Cerita</string>
    <string name="profile">Profile</string>
    <string name="cerita">Tambah Cerita</string>
    <string name="ops">Oops!</string>
    <string name="tidak_ada_izin">Tidak mendapatkan permission.</string>
    <string name="gagal_kamera">Gagal memunculkan kamera.</string>
    <string name="take_gambar">Berhasil mengambil gambar.</string>
    <string name="gagal_take_gambar">Gagal mengambil gambar.</string>
    <string name="tambah_cerita">Tambah Cerita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="style_maps">style_maps</string>
    <string name="retry">retry</string>
    <string name="gmaps">gmaps</string>
    <string name="lokasimu_sekarang">Lokasimu Sekarang</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="failed">gagal</string>
    <string name="no_permission">Tidak ada izin</string>
    <string name="upload_success">Berhasil</string>
    <string name="choose_image">Masukkan Photo</string>
    <string name="upload_failed">Upload Gagal</string>
    <string name="must_filled">Harus diisi</string>
    <string name="oops">oops</string>
    <string name="must_fill_description">Mohon mengisi deskripsi terlebih dahulu</string>
    <string name="select_location_first">Mohon pilih lokasi terlebih dahulu</string>
</resources>