<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.views.UploadActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="15dp"
        tools:visibility="visible"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/overlay_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:elevation="14dp"
        android:visibility="gone"
        android:clickable="true"
        tools:visibility="visible"
        android:focusable="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:minHeight="720dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/preview_img"
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_load" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view">

                <Button
                    android:id="@+id/button_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="20dp"
                    android:text="camera"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blue_400" />

                <Button
                    android:id="@+id/button_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="20dp"
                    android:text="@string/gallery"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blue_400" />
            </LinearLayout>

            <com.rie.alkisah.base.MrCustomView
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:layout_editor_absoluteX="16dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/lokasimu_sekarang"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textOff="@string/on"
                android:textOn="@string/off"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ed_add_description"
                app:layout_constraintStart_toStartOf="@+id/ed_add_description"
                app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

            <Button
                android:id="@+id/ed_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/upload"
                app:backgroundTint="@color/blue_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>
