<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.views.MrLoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="15dp"
        tools:visibility="visible"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/overlay_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:elevation="14dp"
        android:visibility="gone"
        android:clickable="true"
        tools:visibility="visible"
        android:focusable="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="68dp"
                android:background="@drawable/container_rounded1"
                android:elevation="12dp"
                android:outlineAmbientShadowColor="@color/shadowColor"
                android:outlineSpotShadowColor="@color/shadowColor"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="p">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mylogo" />
            </FrameLayout>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/uniform_black"
                android:text="@string/wlcome"
                android:textColor="@color/textColorPrimary"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@+id/frameLayout"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/qoute"
                android:layout_width="374dp"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/login"
                android:textColor="@color/textColorCaption2"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/welcome"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <com.rie.alkisah.base.MrCustomView
            android:id="@+id/ed_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="52dp"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="18dp"
            android:textColor="@color/textColorCaption"
            android:textColorHint="@color/textColorCaption2"
            android:textSize="12sp"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qoute" />

            <com.rie.alkisah.base.MrCustomView
                android:id="@+id/ed_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="18dp"
                android:textColor="@color/textColorCaption"
                android:textColorHint="@color/textColorCaption2"
                android:textSize="12sp"
                android:alpha="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />
            <com.rie.alkisah.base.MrCustomButton
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="52dp"
                app:backgroundTint="@color/blue_400"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:alpha="0"
                app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
                app:layout_constraintStart_toStartOf="@+id/ed_login_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

            <LinearLayout
                android:id="@+id/suggest_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:alpha="0"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login">
                <TextView
                    android:id="@+id/dont_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:text="@string/suggestion2register"/>
                <TextView
                    android:id="@+id/registernow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/blue_800"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/register_now"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>

