<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rie.alkisah.Screens.views.MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:elevation="15dp"
        tools:visibility="visible"
        android:layout_centerInParent="true"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/txt_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uniform_black"
            android:text="@string/welcome"
            android:textSize="18sp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_username_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/account"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/txt_greeting"
            app:layout_constraintTop_toBottomOf="@+id/txt_greeting" />


        <ImageButton
            android:id="@+id/maps"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="14dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/gmaps"
            android:focusable="true"
            android:src="@drawable/ic_map"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:src="@drawable/ic_logout" />
        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_username_account"
            app:layout_constraintVertical_bias="0.0">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_kisah"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:listitem="@layout/item_list_kisah" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/tambah_cerita"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:rippleColor="#8FFFFFFF"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>